api_functionality Implement customer email management api
