# application/app/Http/Requests/Customer/StoreCustomerRequest.php
@@ -15,7 +15,7 @@ class StoreCustomerRequest extends FormRequest
             // Anyone can create new record
             'POST' => true,
             // Updating must match record owner
-            'PUT' => $this->customer->user_id === auth()->id(),
+            'PUT', 'PATCH' => $this->customer->user_id === auth()->id(),
             // Unauthorized for everything else
             default => false,
         };
