# application/public/docs/openapi.yaml
@@ -53,19 +53,19 @@ paths:
                 example:
                   data:
                     -
-                      id: QLqBOqWxPA
-                      name: 'Lou Ernser'
-                      tax_number: 01JA96Y6TWCXVD7K2TKF8ABVEN
+                      customer_id: 1
+                      name: 'Laurie Wyman'
+                      tax_number: 01JA9FA49KTPKV7TK2ZC8HQNN3
                       tax_rate: 17.5
-                      created_at: '2024-10-15 23:06:48'
-                      updated_at: '2024-10-15 23:06:48'
+                      created_at: '2024-10-16 01:33:07'
+                      updated_at: '2024-10-16 01:33:07'
                     -
-                      id: QLqBOqWxPA
-                      name: 'Desiree Donnelly III'
-                      tax_number: 01JA96Y6TXAWTREVMTEVFTZ2NT
+                      customer_id: 1
+                      name: 'Danyka Carroll'
+                      tax_number: 01JA9FA49M0ZBPWQNW3QSDFEFD
                       tax_rate: 17.5
-                      created_at: '2024-10-15 23:06:48'
-                      updated_at: '2024-10-15 23:06:48'
+                      created_at: '2024-10-16 01:33:07'
+                      updated_at: '2024-10-16 01:33:07'
                   links:
                     first: '/?page=1'
                     last: null
@@ -82,40 +82,40 @@ paths:
                     type: array
                     example:
                       -
-                        id: QLqBOqWxPA
-                        name: 'Lou Ernser'
-                        tax_number: 01JA96Y6TWCXVD7K2TKF8ABVEN
+                        customer_id: 1
+                        name: 'Laurie Wyman'
+                        tax_number: 01JA9FA49KTPKV7TK2ZC8HQNN3
                         tax_rate: 17.5
-                        created_at: '2024-10-15 23:06:48'
-                        updated_at: '2024-10-15 23:06:48'
+                        created_at: '2024-10-16 01:33:07'
+                        updated_at: '2024-10-16 01:33:07'
                       -
-                        id: QLqBOqWxPA
-                        name: 'Desiree Donnelly III'
-                        tax_number: 01JA96Y6TXAWTREVMTEVFTZ2NT
+                        customer_id: 1
+                        name: 'Danyka Carroll'
+                        tax_number: 01JA9FA49M0ZBPWQNW3QSDFEFD
                         tax_rate: 17.5
-                        created_at: '2024-10-15 23:06:48'
-                        updated_at: '2024-10-15 23:06:48'
+                        created_at: '2024-10-16 01:33:07'
+                        updated_at: '2024-10-16 01:33:07'
                     items:
                       type: object
                       properties:
-                        id:
-                          type: string
-                          example: QLqBOqWxPA
+                        customer_id:
+                          type: integer
+                          example: 1
                         name:
                           type: string
-                          example: 'Lou Ernser'
+                          example: 'Laurie Wyman'
                         tax_number:
                           type: string
-                          example: 01JA96Y6TWCXVD7K2TKF8ABVEN
+                          example: 01JA9FA49KTPKV7TK2ZC8HQNN3
                         tax_rate:
                           type: number
                           example: 17.5
                         created_at:
                           type: string
-                          example: '2024-10-15 23:06:48'
+                          example: '2024-10-16 01:33:07'
                         updated_at:
                           type: string
-                          example: '2024-10-15 23:06:48'
+                          example: '2024-10-16 01:33:07'
                   links:
                     type: object
                     properties:
@@ -165,34 +165,34 @@ paths:
                 type: object
                 example:
                   data:
-                    id: QLqBOqWxPA
-                    name: 'Mr. Orin Prohaska MD'
-                    tax_number: 01JA96Y6V6KTBHPKPT5269B166
+                    customer_id: 1
+                    name: 'Nicolas Osinski DDS'
+                    tax_number: 01JA9FA49WZVPY41X82V1PQCV1
                     tax_rate: 17.5
-                    created_at: '2024-10-15 23:06:48'
-                    updated_at: '2024-10-15 23:06:48'
+                    created_at: '2024-10-16 01:33:07'
+                    updated_at: '2024-10-16 01:33:07'
                 properties:
                   data:
                     type: object
                     properties:
-                      id:
-                        type: string
-                        example: QLqBOqWxPA
+                      customer_id:
+                        type: integer
+                        example: 1
                       name:
                         type: string
-                        example: 'Mr. Orin Prohaska MD'
+                        example: 'Nicolas Osinski DDS'
                       tax_number:
                         type: string
-                        example: 01JA96Y6V6KTBHPKPT5269B166
+                        example: 01JA9FA49WZVPY41X82V1PQCV1
                       tax_rate:
                         type: number
                         example: 17.5
                       created_at:
                         type: string
-                        example: '2024-10-15 23:06:48'
+                        example: '2024-10-16 01:33:07'
                       updated_at:
                         type: string
-                        example: '2024-10-15 23:06:48'
+                        example: '2024-10-16 01:33:07'
       tags:
         - Customers
       requestBody:
@@ -231,34 +231,34 @@ paths:
                 type: object
                 example:
                   data:
-                    id: QLqBOqWxPA
-                    name: 'Alexys Treutel'
-                    tax_number: 01JA96Y6VBG5RB8EV42TQKQ2CY
+                    customer_id: 1
+                    name: 'Lloyd Block MD'
+                    tax_number: 01JA9FA4A1MB46J9D9MZ2YBEPZ
                     tax_rate: 17.5
-                    created_at: '2024-10-15 23:06:48'
-                    updated_at: '2024-10-15 23:06:48'
+                    created_at: '2024-10-16 01:33:07'
+                    updated_at: '2024-10-16 01:33:07'
                 properties:
                   data:
                     type: object
                     properties:
-                      id:
-                        type: string
-                        example: QLqBOqWxPA
+                      customer_id:
+                        type: integer
+                        example: 1
                       name:
                         type: string
-                        example: 'Alexys Treutel'
+                        example: 'Lloyd Block MD'
                       tax_number:
                         type: string
-                        example: 01JA96Y6VBG5RB8EV42TQKQ2CY
+                        example: 01JA9FA4A1MB46J9D9MZ2YBEPZ
                       tax_rate:
                         type: number
                         example: 17.5
                       created_at:
                         type: string
-                        example: '2024-10-15 23:06:48'
+                        example: '2024-10-16 01:33:07'
                       updated_at:
                         type: string
-                        example: '2024-10-15 23:06:48'
+                        example: '2024-10-16 01:33:07'
       tags:
         - Customers
     put:
@@ -275,34 +275,34 @@ paths:
                 type: object
                 example:
                   data:
-                    id: QLqBOqWxPA
-                    name: 'Reggie Walsh'
-                    tax_number: 01JA96Y6VGVMC2ZC20QS1JM25V
+                    customer_id: 1
+                    name: 'Brielle Jakubowski'
+                    tax_number: 01JA9FA4A68MS7T0J40PCZ49XH
                     tax_rate: 17.5
-                    created_at: '2024-10-15 23:06:48'
-                    updated_at: '2024-10-15 23:06:48'
+                    created_at: '2024-10-16 01:33:07'
+                    updated_at: '2024-10-16 01:33:07'
                 properties:
                   data:
                     type: object
                     properties:
-                      id:
-                        type: string
-                        example: QLqBOqWxPA
+                      customer_id:
+                        type: integer
+                        example: 1
                       name:
                         type: string
-                        example: 'Reggie Walsh'
+                        example: 'Brielle Jakubowski'
                       tax_number:
                         type: string
-                        example: 01JA96Y6VGVMC2ZC20QS1JM25V
+                        example: 01JA9FA4A68MS7T0J40PCZ49XH
                       tax_rate:
                         type: number
                         example: 17.5
                       created_at:
                         type: string
-                        example: '2024-10-15 23:06:48'
+                        example: '2024-10-16 01:33:07'
                       updated_at:
                         type: string
-                        example: '2024-10-15 23:06:48'
+                        example: '2024-10-16 01:33:07'
       tags:
         - Customers
       requestBody:
@@ -335,10 +335,264 @@ paths:
         required: true
         schema:
           type: integer
+  '/api/v1/customers/{customer_id}/emails':
+    get:
+      summary: 'List Customer Emails'
+      operationId: listCustomerEmails
+      description: ''
+      parameters:
+        -
+          in: query
+          name: search
+          description: 'Search for customer emails by name or address'
+          example: john.doe@example.com
+          required: false
+          schema:
+            type: string
+            description: 'Search for customer emails by name or address'
+            example: john.doe@example.com
+        -
+          in: query
+          name: per_page
+          description: 'Number of results per page (Min 25, Max 100)'
+          example: 25
+          required: false
+          schema:
+            type: integer
+            description: 'Number of results per page (Min 25, Max 100)'
+            example: 25
+        -
+          in: query
+          name: page
+          description: 'Page number'
+          example: 1
+          required: false
+          schema:
+            type: integer
+            description: 'Page number'
+            example: 1
+      responses:
+        200:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  data:
+                    -
+                      customer_email_id: 1
+                      name: 'Jodie McClure'
+                      address: ortiz.bryana@example.net
+                      is_default: true
+                      created_at: '2024-10-16 01:33:07'
+                      updated_at: '2024-10-16 01:33:07'
+                    -
+                      customer_email_id: 1
+                      name: 'Carrie Schmidt'
+                      address: fdubuque@example.net
+                      is_default: true
+                      created_at: '2024-10-16 01:33:07'
+                      updated_at: '2024-10-16 01:33:07'
+                  links:
+                    first: '/?page=1'
+                    last: null
+                    prev: null
+                    next: null
+                  meta:
+                    current_page: 1
+                    from: 1
+                    path: /
+                    per_page: 25
+                    to: 2
+                properties:
+                  data:
+                    type: array
+                    example:
+                      -
+                        customer_email_id: 1
+                        name: 'Jodie McClure'
+                        address: ortiz.bryana@example.net
+                        is_default: true
+                        created_at: '2024-10-16 01:33:07'
+                        updated_at: '2024-10-16 01:33:07'
+                      -
+                        customer_email_id: 1
+                        name: 'Carrie Schmidt'
+                        address: fdubuque@example.net
+                        is_default: true
+                        created_at: '2024-10-16 01:33:07'
+                        updated_at: '2024-10-16 01:33:07'
+                    items:
+                      type: object
+                      properties:
+                        customer_email_id:
+                          type: integer
+                          example: 1
+                        name:
+                          type: string
+                          example: 'Jodie McClure'
+                        address:
+                          type: string
+                          example: ortiz.bryana@example.net
+                        is_default:
+                          type: boolean
+                          example: true
+                        created_at:
+                          type: string
+                          example: '2024-10-16 01:33:07'
+                        updated_at:
+                          type: string
+                          example: '2024-10-16 01:33:07'
+                  links:
+                    type: object
+                    properties:
+                      first:
+                        type: string
+                        example: '/?page=1'
+                      last:
+                        type: string
+                        example: null
+                      prev:
+                        type: string
+                        example: null
+                      next:
+                        type: string
+                        example: null
+                  meta:
+                    type: object
+                    properties:
+                      current_page:
+                        type: integer
+                        example: 1
+                      from:
+                        type: integer
+                        example: 1
+                      path:
+                        type: string
+                        example: /
+                      per_page:
+                        type: integer
+                        example: 25
+                      to:
+                        type: integer
+                        example: 2
+      tags:
+        - 'Customer Emails'
+    post:
+      summary: 'Create Customer Email'
+      operationId: createCustomerEmail
+      description: ''
+      parameters: []
+      responses: {  }
+      tags:
+        - 'Customer Emails'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  description: 'Must be at least 3 characters. Must not be greater than 64 characters.'
+                  example: 'John Doe'
+                address:
+                  type: string
+                  description: 'Must be a valid email address. Must be at least 3 characters. Must not be greater than 256 characters.'
+                  example: john.doe@example.com
+                is_default:
+                  type: boolean
+                  description: ''
+                  example: true
+              required:
+                - name
+                - address
+    parameters:
+      -
+        in: path
+        name: customer_id
+        description: 'The ID of the customer.'
+        example: 1
+        required: true
+        schema:
+          type: integer
+  '/api/v1/customers/{customer_id}/emails/{id}':
+    get:
+      summary: 'Get Customer Email'
+      operationId: getCustomerEmail
+      description: ''
+      parameters: []
+      responses:
+        401:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  message: Unauthorized
+                properties:
+                  message:
+                    type: string
+                    example: Unauthorized
+      tags:
+        - 'Customer Emails'
+    put:
+      summary: 'Update Customer Email'
+      operationId: updateCustomerEmail
+      description: ''
+      parameters: []
+      responses: {  }
+      tags:
+        - 'Customer Emails'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  description: 'Must be at least 3 characters. Must not be greater than 64 characters.'
+                  example: 'John Doe'
+                address:
+                  type: string
+                  description: 'Must be a valid email address. Must be at least 3 characters. Must not be greater than 256 characters.'
+                  example: john.doe@example.com
+                is_default:
+                  type: boolean
+                  description: ''
+                  example: false
+              required:
+                - name
+                - address
+    parameters:
+      -
+        in: path
+        name: customer_id
+        description: 'The ID of the customer.'
+        example: 1
+        required: true
+        schema:
+          type: integer
+      -
+        in: path
+        name: id
+        description: 'The ID of the email.'
+        example: 1
+        required: true
+        schema:
+          type: integer
 tags:
   -
     name: Customers
     description: 'Customer Management API'
+  -
+    name: 'Customer Emails'
+    description: 'Customer Email Management API'
 components:
   securitySchemes:
     default:
